Name:                   logbook
Version:                0.0.0.1
Synopsis:               A blog snaplet for the Snap Framework
Homepage:               http://digitalmentat.com/projects/logbook
License:                BSD3
License-File:           LICENSE
Author:                 Parnell Springmeyer
Maintainer:             parnell@digitalmentat.com
Copyright:              (c) 2013 Parnell Springmeyer
Category:               Graphics
Build-Type:             Simple
Stability:              alpha
Bug-Reports:            https://github.com/ixmatus/logbook/issues
--Package-Url:            http://hackage.haskell.org/package/logbook
Tested-With:            GHC == 7.6.3
Cabal-Version:          >=1.14.0

description:
  `Logbook` is a <http://snapframework.com Snapframework> Snaplet
  providing a simple and easy to use blogging application with a clear
  design focus and intentional typography.
  .
  <http://jaspervdj.be/hakyll/ Hakyll> is a valid choice for building
  statically compiled blogs but lacks a certain flexibility and
  turnkey ease of use I wish were present.

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fno-warn-unused-do-bind
  Exposed-Modules:      Snap.Snaplet.LogBook
  Other-Modules:        Snap.Snaplet.LogBook.Internal

  Build-Depends:
    base                       >= 4        && < 5,
    snap                       >= 0.13     && < 0.14,
    snap-core                  >= 0.9      && < 0.11,
    heist                      >= 0.13     && < 0.14,
    containers                 >= 0.5.5    && < 0.5.6,
    aeson                      >= 0.7      && < 0.8,
    system-filepath            >= 0.4      && < 0.5

Test-Suite tests
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test, src
  Ghc-Options:          -Wall
  Main-Is:              Test.hs
  Other-Modules:
    Snap.Snaplet.LogBook
    Snap.Snaplet.LogBook.Internal

  Build-Depends:
    base                       >= 4.4      && < 5,
    text                       >= 1.1.0.1  && < 1.2,
    system-filepath            >= 0.4.12   && < 0.5,
    bytestring                 >= 0.9.1    && < 0.11,
    QuickCheck                 >= 2.6      && < 2.8,
    HUnit                      >= 1.2.5.2  && < 1.3,
    tasty                      >= 0.8      && < 0.9,
    tasty-golden               >= 2.2.1    && < 2.3,
    tasty-hunit                >= 0.8.0.1  && < 0.9,
    tasty-quickcheck           >= 0.8      && < 0.9

Source-Repository head
  Type:                 git
  Location:             https://github.com/ixmatus/logbook
